# mgi-serbia

./: README.md  pyproject.toml
data/: final_clusterised_data.csv  reduced_dimentions_data.csv
notebooks/: classical_approaches_on_reduced_data.ipynb
notebooks/.ipynb_checkpoints/: data_preprocessing-checkpoint.ipynb  probability_weighted_graph_clusterization-checkpoint.ipynb  visualization-checkpoint.ipynb
